Creado mediante Colaboratory

--- a/Python_exercices.ipynb
+++ b/Python_exercices.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPR6OgJvz4PAF06uO3B4xzD",
+      "authorship_tag": "ABX9TyNq8qsb+JIR+d7kJCUdu2Mv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,11 +29,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "xeZkNbv-_T4d"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xeZkNbv-_T4d",
+        "outputId": "4b55b2eb-a2b4-410b-9e7f-288a51406eda"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n"
+          ]
+        }
+      ],
       "source": [
         "#Find the Max of three numbers\n",
         "import numpy\n",
@@ -44,6 +56,81 @@
         "    \n",
         "print(get_max(numbers))"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Write a Python function to sum all the numbers in a list\n",
+        "import numpy\n",
+        "numbers = [5,6,8,9,10]\n",
+        "\n",
+        "\n",
+        "def sum_list(numbers:list):\n",
+        "  return numpy.sum(numbers)\n",
+        "    \n",
+        "print(sum_list(numbers))"
+      ],
+      "metadata": {
+        "id": "YcA4xdBNACnS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Write a Python function to multiply all the numbers in a list\n",
+        "import numpy\n",
+        "numbers = [5,6,8,9,10]\n",
+        "\n",
+        "\n",
+        "def mul_list(numbers:list):\n",
+        "  return numpy.product(numbers)\n",
+        "    \n",
+        "print(mul_list(numbers))"
+      ],
+      "metadata": {
+        "id": "ZNyQuEtGAnYm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Write a Python program to reverse a string. \n",
+        "import numpy\n",
+        "string_ori = \"python\"\n",
+        "\n",
+        "\n",
+        "def rev_string(string_ori):\n",
+        "  return string_ori[::-1]\n",
+        "    \n",
+        "print(rev_string(string_ori))"
+      ],
+      "metadata": {
+        "id": "OqUeE83wBZEU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Write a Python function to calculate the factorial of a number (a non-negative integer). The function accepts the number as an argument.\n",
+        "def factorial(num):\n",
+        "  if num == 0:\n",
+        "    return 1\n",
+        "  else:\n",
+        "    return num * factorial(num-1)\n",
+        "      \n",
+        "print(factorial(4))      "
+      ],
+      "metadata": {
+        "id": "lyafXpzBCWiu"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
